art-entraide/view/css/master.css
:root {
	--accent-color-vert: #74ae5b;
	--accent-color-violet: #8b49b4;
}

/*=========== GÉNÉRAL ===========*/
html {
	scroll-behavior: smooth;
}

h2 {
	font-size: 1.2em;
}

em {
  font-weight: normal;
  color: red;
}

body {
  font-family: sans-serif;
  margin: 0;
	font-family: 'Open Sans', sans-serif;
	color: #212121;
	background-color: #F5F5F5;
}

a {
  color: #212121;
}

button {
	cursor: pointer;
}

textarea {
	font-family: 'Roboto Slab', serif;
	font-size: 1em;
}

button:not(.boutonCategorie) {
	background-color: none;
	font-size: 1.05em;
	line-height: 1;
	margin: 0.2em;
	padding: 0.7em;
	border-radius: 10px;
	border: solid 2px var(--accent-color-violet);
	color: var(--accent-color-violet);
	font-weight: 600;
	transition: 0.25s;
}

button:not(.boutonCategorie):hover {
	box-shadow: inset 6.5em 0 0 0 var(--accent-color-violet);
	color: white;
	background: var(--accent-color-violet);
	border-color: var(--accent-color-violet);
	/* transform: translateY(-0.25em); */
}

button.actionCritique {
	color: #e53935;
	border: solid 2px #e53935CC;
}

button.actionCritique:hover {
	box-shadow: inset 6.5em 0 0 0 #e53935;
	color: white;
	background: #e53935;
	border-color: #e53935;
	/* transform: translateY(-0.25em); */
}

button.indicationCategorie {
  color: var(--accent-color-vert);
	border: solid 2px var(--accent-color-vert);
}

button.indicationCategorie:hover {
  box-shadow: inset 6.5em 0 0 0 var(--accent-color-vert);
  color: white;
  background: var(--accent-color-vert);
  border-color: var(--accent-color-vert);
}

/*=========== HEADER ===========*/

body > header > div {
  display: flex;
  align-items: center;
}

body > header {
	display: flex;
	flex-direction: column;
	box-shadow: 0px 5px 5px 0px #6c6c6c;
  margin: 5px 0px;
}

nav {
  flex-grow: 1;
	padding: 0.6em 5%;
}

header > div > nav ul {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	margin: 0;
	padding: 0;
	text-align: right;
	list-style-type: none;
  margin-right: 10px;
}

header > div > nav ul li {
	display: inline-block;
	position: relative;
	margin: 5px;
}

header > div > nav ul form {
	display: flex;
	align-items: center;
	justify-content: flex-end;
	flex-direction: row;
	align-items: center;
}

/* Search bar */
header > div > nav ul form:first-of-type {
	flex-grow: 1;
	margin-left: 20px;
}

header > div > nav ul form li:first-of-type, header > div > nav ul form li:first-of-type input {
	width: 85%;
}

/* Bouton créer un compte */
header > div > nav ul form:last-of-type li:last-of-type button {
	min-width: 160px;
}

nav.ariane {
	background-color: #DDDDDD;
}

nav.ariane ul {
	display: flex;
	list-style-type: none;
	padding: 0;
	margin: 0;
}

nav.ariane ul li {
	padding-left: 16px;
}

nav.ariane ul li:before {
  content: ">";
  padding-right: 8px;
}

.error {
	background-color: #e5393588;
	border: solid 2px #e53935CC;
	border-radius: 5px;
	margin: 10px;
	padding: 10px;
}

.error ul li p {
	margin: 0;
}

.error > p {
	font-weight: bold;
	margin-top: 0;
}

.message {
	background-color: #4CAF5088;
	border: solid 2px #4CAF50CC;
	border-radius: 5px;
	margin: 10px;
	padding: 10px;
}

body > section {
	min-height: 72vh;
	width: 95%;
  margin: auto;
}

/* ==Drop down== */
.dropbtn {
  color: white;
  padding: 16px;
  font-size: 16px;
  border: none;
  cursor: pointer;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 160px;
  overflow: auto;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
	border-radius: 10px;
	text-align: center;
  z-index: 1;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
	transition: 0.25s;
}

.dropdown-content a:hover {
	box-shadow: inset 6.5em 0 0 0 var(--accent-color-vert);
	color: white;
	background: var(--accent-color-vert);
	border-color: var(--accent-color-vert);
}

.show {display: block;}

/*=========== FOOTER ===========*/

footer {
  padding: 1em 1em 2em 1em;
  background-color: #DDDDDD;

}

/* Pour changer le footer, j'ai du changer sa structure, après avoir changé sa structure,
certaines règles CSS sont devenues inutiles, mais je les laissent quand même en commentaires
au cas-ou

-Lucas


body > footer > header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

body > footer > header p {
  margin: 5px 0px;
  flex: 1 0 9.375em;
}

body > footer > header a {
	display: flex;
	align-items: flex-end;
}

body > footer > header a img {
	width: 21px;
}
*/

footer a {
	text-decoration: none;
}

footer a:hover {
	text-decoration: underline;
}

footer > section {
  display: flex;
	flex-direction: column;
}

footer > section > div.hautdepage {
	position: absolute;
	right: 1em;
}

footer > section > div.hautdepage > a{
	display: flex;
	align-items: flex-end;
}


footer > section > div.hautdepage img {
	width: 21px;
}


footer > section > div.mainfooter {
	margin: auto;
	width: 82%;

	display: flex;
	flex-direction: row;

	justify-content: space-evenly;
  align-items: flex-start;
  flex-wrap: wrap;

	padding: 0em 1em 0em 1em;
}

footer > section > div.mainfooter > div > h3 {
	border-bottom: 2px solid #212121;
}

footer > section > div.mainfooter > div > div.text {
	display: flex;
	flex-direction: column;
}

footer > section > div.mainfooter > div > div.reseaux {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}

/*

body > footer > section > section {
  flex: 1 0 200px;
}

body > footer > section > section:first-child {
  display: flex;
  flex-direction: column;
}

body > footer > section > section:last-child {
  text-align: right;
}
body > footer .icon {
	text-decoration: none;
}

*/

